# worksection-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  server.py  web_server.py
